Fix navbar float alignment to left

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1{
   text-align: center;
 }
 .navbar li {
-  float: centre;
+  float: left;
 }
 .home {
   text-align: center;
